src/test/resources/valid_programs/while_block_scoping.notc
// Test new scope in while block
void main() {
    string s = "first";
    printString(s);
    bool b = true;
    while (b) {
        string s = "second";
        printString(s);
        b = false;
    }
    printString(s);
}
