src/test/resources/semantic_errors/redecl_params.notc
bool fun(string s, string s) {
    return s;
}

void main() {
}
